--- a/snp_site/my_site/templates/photo_page.html
+++ b/snp_site/my_site/templates/photo_page.html
@@ -25,6 +25,9 @@
             </button>
         </form>
        </div>
+       <div id="user-panel" class="mb-3">
+         
+       </div>
 
         <h3>Комментарии:</h3>
         <div id="comment-container">
