--- a/snp_site/my_site/templates/user_page.html
+++ b/snp_site/my_site/templates/user_page.html
@@ -142,12 +142,15 @@
                     'waiting': ['yellow', 'В ожидании'],
                     'on_delete': ['blue', 'На удалении']
                 }
+                
                 photos.innerHTML+=`
                 <div class="post card p-4 mb-4" style="width:600px;">
                     <div id='state' class="fw-bold mt-2 text-center p-2  rounded" style="background-color:${state_colors[element.state][0]} ;">${state_colors[element.state][1]}</div>
                     <h1 class="fw-bold mt-2 text-center">${element.user.username}</h1>
                     <h1 class="fw-bold mt-2 text-center">${element.name}</h1>
-                    <img src=${element.photo} alt="нет фото"/>
+                    <a href="http://127.0.0.1:8000/photos/${element.id}">
+                        <img src=${element.photo} alt="нет фото"/>
+                    </a>
                     <div class="coment-and-like-container">
                             <div class="left-element">
                                 <img src="http://127.0.0.1:8000/static/images/chat.png" class="like-comment-image"/>
